--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "chance": "^1.1.8",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12"
