Grant the manager user the demo_admin role.

--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -31,9 +31,10 @@ services:
 
         # Configure demo admin role.
         drush en role_delegation
+        drush config:import --partial --source $TUGBOAT_ROOT/drupal/config -y
 
         # Create test users with manager, worker and viewer roles.
-        drush user-create manager --password manager && drush user-add-role farm_manager manager
+        drush user-create manager --password manager && drush user-add-role farm_manager manager && drush user-add-role demo_admin manager
         drush user-create worker && drush user-add-role farm_worker worker
         drush user-create viewer && drush user-add-role farm_viewer viewer
 
