--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,7 @@
     command = "npm run build"
 [[plugins]]
     package = "@netlify/plugin-functions-install-core"
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
