--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -51,7 +51,7 @@ services:
         for locale in de es it nl
         do
           curl "https://ftp.drupal.org/files/translations/all/farm/farm-2.1.3.$locale.po" -o "/opt/drupal/web/sites/default/files/translations/farm-$locale.po" --silent
-          drush locale:import $locale /opt/drupal/web/sites/default/files/translations/farm-$locale.po
+          drush locale:import --autocreate-language $locale /opt/drupal/web/sites/default/files/translations/farm-$locale.po
         done
 
         # Update all module translations.
