--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -10,7 +10,7 @@ services:
 
         # Additional composer dependencies.
         cd /opt/drupal
-        composer require drupal/role_delegation drupal/userprotect drupal/farm_nrcs -W --no-install
+        composer require drupal/farm_nrcs -W --no-install
         composer install --no-cache --no-interaction
       
       # Commands that import files, databases, or other assets.
@@ -27,15 +27,13 @@ services:
         drush site:install --db-url=sqlite://sites/default/files/db.sqlite --account-name=admin --account-pass=$ADMIN_PASSWORD farm farm.modules='all' --yes
         
         # Additional farmOS modules.
-        drush en farm_nrcs farm_quick_planting --yes
+        drush en farm_account_admin farm_nrcs farm_quick_planting --yes
 
         # Configure mapbox.
         drush en farm_map_mapbox --yes
         drush config:set farm_map_mapbox.settings api_key $MAPBOX_API_KEY --yes
 
         # Configure demo admin role.
-        drush en role_delegation
-        drush en userprotect
         drush config:import --partial --source $TUGBOAT_ROOT/drupal/config -y
 
         # Update ownership of files so www-data has access to db.
@@ -71,7 +69,7 @@ services:
         if [ $TUGBOAT_BASE_PREVIEW ]; then
 
           # Create test users with manager, worker and viewer roles.
-          drush user-create manager --password manager && drush user-add-role farm_manager manager && drush user-add-role demo_admin manager
+          drush user-create manager --password manager && drush user-add-role farm_manager manager && drush user-add-role farm_account_admin && drush user-add-role demo_admin manager
           drush user-create worker && drush user-add-role farm_worker worker
           drush user-create viewer && drush user-add-role farm_viewer viewer
 
