Fix account admin role name

--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -27,7 +27,7 @@ services:
         drush site:install --db-url=sqlite://sites/default/files/db.sqlite --account-name=admin --account-pass=$ADMIN_PASSWORD farm farm.modules='all' --yes
         
         # Additional farmOS modules.
-        drush en farm_account_admin farm_nrcs farm_quick_planting --yes
+        drush en farm_role_account_admin farm_nrcs farm_quick_planting --yes
 
         # Configure mapbox.
         drush en farm_map_mapbox --yes
