--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -27,7 +27,7 @@ services:
         drush site:install --db-url=sqlite://sites/default/files/db.sqlite --account-name=admin --account-pass=$ADMIN_PASSWORD farm farm.modules='all' --yes
         
         # Additional farmOS modules.
-        drush en farm_role_account_admin farm_quick_planting farm_nrcs farm_calendar --yes
+        drush en farm_role_account_admin farm_quick_planting farm_quick_movement farm_quick_inventory farm_nrcs farm_calendar --yes
 
         # Configure mapbox.
         drush en farm_map_mapbox --yes
