--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -27,8 +27,8 @@ services:
         mkdir -p /opt/drupal/web/sites/default/files
         
         # Drush site-install to a sqlite file.
-        drush site:install --db-url=sqlite://sites/default/files/db.sqlite --account-name=admin --account-pass=$ADMIN_PASSWORD farm --yes
-
+        drush site:install --db-url=sqlite://sites/default/files/db.sqlite --account-name=admin --account-pass=$ADMIN_PASSWORD farm farm.modules='default' --yes
+        
         # Additional farmOS modules.
         drush en farm_role_account_admin farm_quick_planting farm_quick_movement farm_quick_inventory farm_nrcs farm_calendar --yes
 
