--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -27,7 +27,7 @@ services:
         mkdir -p /opt/drupal/web/sites/default/files
         
         # Drush site-install to a sqlite file.
-        drush site:install --db-url=sqlite://sites/default/files/db.sqlite --account-name=admin --account-pass=$ADMIN_PASSWORD farm farm.modules='all' --yes
+        drush site:install --db-url=sqlite://sites/default/files/db.sqlite --account-name=admin --account-pass=$ADMIN_PASSWORD farm farm.modules='default' --yes
         
         # Additional farmOS modules.
         drush en farm_role_account_admin farm_quick_planting farm_quick_movement farm_quick_inventory farm_nrcs farm_calendar --yes
@@ -37,7 +37,7 @@ services:
         drush config:set farm_map_mapbox.settings api_key $MAPBOX_API_KEY --yes
 
         # Configure demo admin role.
-        drush config:import --partial --source $TUGBOAT_ROOT/drupal/config -y
+        #drush config:import --partial --source $TUGBOAT_ROOT/drupal/config -y
 
         # Update ownership of files so www-data has access to db.
         chgrp -R www-data /opt/drupal/web/sites/default/files
